# monet

./: AGENTS.md  Cargo.toml  README.md  rustfmt.toml
crates/gogh/: Cargo.toml
crates/monet/: Cargo.toml
crates/monet-macros/: Cargo.toml
crates/monet-macros/src/: handler.rs  lib.rs  util.rs
crates/monet-next/: Cargo.toml
crates/monet-next/src/: handler.rs  lib.rs  serve.rs
crates/monet/examples/: catch-panic.rs  extract-path.rs  fallback.rs  hello-world.rs  json.rs  merge-conflict.rs  merge-route.rs  nested-route.rs  parse-form.rs  parse-json.rs  serve-static.rs  wildcard-route.rs
crates/monet/examples/assets/: hello.html
crates/monet/src/: body.rs  error.rs  extract.rs  form.rs  handler.rs  handler_future.rs  handler_tower_impl.rs  json.rs  lib.rs  macros.rs  middleware.rs  request.rs  response.rs  router.rs  routing.rs  serve.rs  types.rs
crates/monet/src/extract/: json.rs  path.rs  query.rs  rejection.rs  state.rs
crates/monet/src/handler/: middleware.rs
crates/monet/src/handler/endpoint/: serve_dir.rs
crates/monet/src/handler/endpoint/serve_dir/: headers.rs
crates/monet/src/handler/middleware/: catch_panic.rs  strip_prefix.rs
crates/monet/src/router/: tests.rs  url.rs  url_params.rs
crates/monet/src/routing/: method_filter.rs  method_router.rs  route.rs  route_next.rs  route_tower.rs  route_tower_impl.rs  route_tower_impl_with_lifetime.rs  router.rs  router_tower_impl.rs
crates/monoio/: Cargo.toml
crates/monoio-compat/: Cargo.toml
crates/monoio-compat/src/: lib.rs
crates/monoio-macros/: Cargo.toml
crates/monoio/src/: lib.rs  runtime.rs
crates/monoio/src/task/: mod.rs
crates/nirvana/: Cargo.toml
crates/nirvana/src/: extract.rs  handler.rs  lib.rs  macros.rs  main.rs  response.rs  routing.rs  serve.rs  tower_service.rs
crates/nirvana/src/extract/: query.rs  state.rs
crates/nirvana/src/handler/: handler_service.rs  handler_service_tower.rs
crates/nirvana/src/routing/: method_router.rs  method_routing.rs  path_router.rs  route.rs  route_tower.rs  router.rs  router_tower.rs  router_tower_impl.rs
crates/nirvana/src/tower_service/: handler.rs  route.rs  router.rs
crates/nirvana/src/tower_service/route/: box_clone_service.rs  make_into_response.rs
examples/hello-compio/: Cargo.toml
examples/hello-compio/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/non-static/: Cargo.toml
examples/non-static/src/: main.rs
examples/nonstatic/src/: main.rs
src/: lib.rs  macros.rs
static/assets/: hello.html
