[package]
name = "monet-next"
version = "0.1.3"
edition = "2024"

[dependencies]
compio = { version = "0.18.0", features = ["io-compat", "net", "macros", "time"] }
bytes = "1.11.1"
futures = "0.3.32"
hyper = { version = "1.8.1", features = ["http1", "server"] }
http-body-util = { version = "0.1.3", features = ["full"] }
socket2 = "0.6.2"
send_wrapper = "0.6.0"
futures-util = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "2.6.1"
jiff = "0.2.23"
tokio = { version = "1.52.1", default-features = false, features = ["macros"] }
http-body = "1.0.1"
http = "1.4.0"
matchit = "0.9.2"

[lints]
workspace = true
