[package]
name = "monet"
version = "0.1.2"
edition = "2024"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
description = "io-uring based, share-nothing(aka. thread-per-core) web framework with structured concurrency"
keywords = ["http", "web", "framework", "iouring", "async"]
readme = "../../README.md"
repository = "https://github.com/ugoa/monet"
authors = ["Dawei Hu <hoodavy@gmail.com>"]

[dependencies]
monoio = { package = "mondayio", path = "../monoio", version = "0.2.4", default-features = true, features = ["sync"] }
monoio-compat = { package = "mondayio-compat", version = "0.2.2", path = "../monoio-compat", features = ["hyper"] }

bytes = { version = "1.11.0", features = ["serde"] }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
# io-uring = "0.7.11"
matchit = "0.9.0"
pin-project-lite = "0.2.16"
tower = { version = "0.5.2", features = ["full"] }
tower-service = "0.3.3"
tokio = { version = "1", default-features = false, features = ["io-util"] }
serde_core = "1.0.228"


# Should be Optional
form_urlencoded = { version = "1.1.0" }
serde_json = { version = "1.0", features = ["raw_value"]  }
serde_path_to_error = { version = "0.1.8"  }
serde_urlencoded = { version = "0.7" }

serde = { version = "1.0.221", features = ["derive"] }
futures-concurrency = "7.6.3"
