[package]
name = "monet"
version = { workspace = true }
edition = { workspace = true }
authers  = { workspace = true }

[dependencies]
monet-macros = { workspace = true }
compio = { version = "0.18.0", features = ["io-compat", "net", "macros", "time"] }
bytes = "1.11.1"
futures = "0.3.32"
hyper = { version = "1.8.1", features = ["http1", "server"] }
http-body-util = { version = "0.1.3", features = ["full"] }
socket2 = "0.6.2"
send_wrapper = "0.6.0"
futures-util = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "2.6.1"
jiff = "0.2.23"
tokio = { version = "1.52.1", default-features = false, features = ["macros"] }
http-body = "1.0.1"
http = "1.4.0"
matchit = "0.9.2"
async-trait = "0.1.89"
mime = "0.3.17"
serde_core = "1.0.228"
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }

[lints]
workspace = true

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
