[package]
name = "hello-world"
publish = false
edition = "2024"
version = "0.1.0"

[dependencies]
monet = { path = "../../crates/monet" }
monoio = { package = "mondayio", path = "../../crates/monoio" }

bytes = { version = "1.11.0", features = ["serde"] }
futures = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
http = "1.4.0"
serde = { version = "1.0.221", features = ["derive"] }
rand = { version = "0.9.2" }

[lints]
workspace = true
