[package]
name = "non-static"
publish = false
edition = "2024"
version = "0.1.0"

[dependencies]
monet = { path = "../../crates/monet" }
monoio = { package = "mondayio", path = "../../crates/monoio" }
monoio_compat = { package = "mondayio-compat", version = "0.2.2", path = "../../crates/monoio-compat" }

bytes = { version = "1.11.0", features = ["serde"] }
futures = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
http = "1.4.0"
serde = { version = "1.0.221", features = ["derive"] }
rand = { version = "0.9.2" }

http-body = "1.0.1"

tower = { version = "0.5.2", features = ["full"] }
tower-util = "0.3.1"
tower-service = "0.3.3"


futures-core = "0.3.31"
futures-util = "0.3.31"
pin-project-lite = "0.2.16"

hyper-util = { version = "0.1.19", features = ["full"] }

# io-uring = "0.7.11"
matchit = "0.9.0"
serde_core = "1.0.228"

[lints]
workspace = true
